fix: remove manual margin-top on post header for proper vertical alignment

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -55,6 +55,7 @@ main
 {
     display: flex;
     margin-top: 3px;
+    align-items: center;
 }
 .post-username
 {
